@@ -645,7 +645,7 @@ a8-[ ais-] d-[ es r d-]
 @menu
 * Combining music into compound expressions::  
 * Adding articulation marks to notes ::  
-* More basic rhythms::          
+* Basic rhythmical commands::   
 * Commenting input files::      
 @end menu
 
